<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mogumogu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textScore"
        android:layout_width="90dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/score"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Time"
        android:layout_width="90dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="68dp"
        android:text="@string/Time"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TxtHiScore"
        android:layout_width="113dp"
        android:layout_height="43dp"
        android:layout_marginStart="196dp"
        android:layout_marginLeft="196dp"
        android:layout_marginTop="16dp"
        android:text="@string/HiScore"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/intScore"
        android:layout_width="90dp"
        android:layout_height="43dp"
        android:layout_marginStart="108dp"
        android:layout_marginLeft="108dp"
        android:layout_marginTop="16dp"
        android:text="@string/zero"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/doubleTime"
        android:layout_width="120dp"
        android:layout_height="42dp"
        android:layout_marginStart="108dp"
        android:layout_marginLeft="108dp"
        android:layout_marginTop="68dp"
        android:text="@string/zero"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/intHiScore"
        android:layout_width="90dp"
        android:layout_height="43dp"
        android:layout_marginStart="308dp"
        android:layout_marginLeft="308dp"
        android:layout_marginTop="16dp"
        android:text="@string/zero"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/mog1"
        android:layout_width="127dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="250dp"
        android:layout_marginBottom="126dp"
        app:layout_constraintBottom_toTopOf="@+id/mog4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textScore"
        app:srcCompat="@drawable/moguratataki" />

    <ImageView
        android:id="@+id/mog3"
        android:layout_width="127dp"
        android:layout_height="120dp"
        android:layout_marginTop="310dp"
        android:layout_marginBottom="126dp"
        app:layout_constraintBottom_toTopOf="@+id/mog6"
        app:layout_constraintStart_toEndOf="@+id/mog2"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/moguratataki" />

    <ImageView
        android:id="@+id/mog2"
        android:layout_width="127dp"
        android:layout_height="120dp"
        android:layout_marginTop="250dp"
        android:layout_marginBottom="126dp"
        app:layout_constraintBottom_toTopOf="@+id/mog5"
        app:layout_constraintStart_toEndOf="@+id/mog1"
        app:layout_constraintTop_toBottomOf="@+id/intScore"
        app:srcCompat="@drawable/moguratataki" />

    <ImageView
        android:id="@+id/jimen1"
        android:layout_width="408dp"
        android:layout_height="129dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="5dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/mog4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mog3"
        app:srcCompat="@drawable/dot" />

    <ImageView
        android:id="@+id/mog4"
        android:layout_width="127dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="234dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mog1"
        app:srcCompat="@drawable/moguratataki" />

    <ImageView
        android:id="@+id/mog5"
        android:layout_width="127dp"
        android:layout_height="120dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="234dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mog4"
        app:layout_constraintTop_toBottomOf="@+id/mog2"
        app:srcCompat="@drawable/moguratataki" />

    <ImageView
        android:id="@+id/mog6"
        android:layout_width="127dp"
        android:layout_height="120dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="234dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mog5"
        app:layout_constraintTop_toBottomOf="@+id/mog3"
        app:srcCompat="@drawable/moguratataki" />

    <ImageView
        android:id="@+id/jimen2"
        android:layout_width="412dp"
        android:layout_height="93dp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mog4"
        app:srcCompat="@drawable/dot" />

    <Button
        android:id="@+id/stopGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:autoText="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/GameStop" />

    <Button
        android:id="@+id/startBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="162dp"
        android:layout_marginRight="162dp"
        android:text="@string/Start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/hit1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="@+id/mog1"
        app:layout_constraintTop_toTopOf="@+id/mog1"
        app:srcCompat="@drawable/hit" />

    <ImageView
        android:id="@+id/hit3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/mog3"
        app:layout_constraintTop_toTopOf="@+id/mog3"
        app:srcCompat="@drawable/hit" />

    <ImageView
        android:id="@+id/hit2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/mog2"
        app:layout_constraintTop_toTopOf="@+id/mog2"
        app:srcCompat="@drawable/hit" />

    <ImageView
        android:id="@+id/hit4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="@+id/mog4"
        app:layout_constraintTop_toTopOf="@+id/mog4"
        app:srcCompat="@drawable/hit" />

    <ImageView
        android:id="@+id/hit5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="@+id/mog5"
        app:layout_constraintTop_toTopOf="@+id/mog5"
        app:srcCompat="@drawable/hit" />

    <ImageView
        android:id="@+id/hit6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="9dp"
        app:layout_constraintEnd_toEndOf="@+id/mog6"
        app:layout_constraintTop_toTopOf="@+id/mog6"
        app:srcCompat="@drawable/hit" />

</androidx.constraintlayout.widget.ConstraintLayout>